# lead-intent-ranker

./: .gitignore  CONTRIBUTING.md  README.md  example_input.csv  pyproject.toml  ranked.csv  ranker.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
